--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mocha": "^8.2.1",
     "needle": "^2.5.2",
     "nock": "^13.0.5",
+    "node-fetch": "^3.3.0",
     "request": "^2.61.0"
   }
 }
